[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Components/EnemyHealthbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Components/LevelBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Entities/Enemies/BasicEnemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/basic_enemy-spritesheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 10, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 20, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 30, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 10, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 20, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 30, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 20, 10, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 10, 20, 10, 10 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 40, 10, 10 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 30, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 20, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 10, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 20 ) ],
"loop": false,
"name": "level_up",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 20 ) ],
"loop": false,
"name": "spawn",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 69, 68.5 )

[node name="BasicEnemy" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 8, 8 )
frames = SubResource( 2 )
animation = "death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Gun1" type="Node2D" parent="."]
position = Vector2( -24, 32 )

[node name="Gun2" type="Node2D" parent="."]
position = Vector2( 24, 32 )

[node name="Bound" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bound"]
shape = SubResource( 3 )

[node name="EnemyHealthbar" parent="." instance=ExtResource( 1 )]
margin_left = -30.0
margin_top = -48.0
margin_right = 30.0
margin_bottom = -38.0

[node name="LevelBar" parent="." instance=ExtResource( 2 )]
margin_left = -30.0
margin_top = -63.0
margin_right = 30.0
margin_bottom = -30.0

[connection signal="area_entered" from="." to="." method="_on_BasicEnemy_area_entered"]
[connection signal="body_entered" from="Bound" to="." method="_on_SpaceArea_body_entered"]
